<resources>
    <string name="app_name">Lender</string>
    <string name="mm_kay">mm\'kay</string>
    <string name="instruction">To get the loan on the suggested conditions, you need to make an application in your personal account. In loan list you can check all yours applications and their states. Good luck in this amazing adventure</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="application">Application</string>
    <string name="max_amount_title">Maximum Amount:</string>
    <string name="period_title">Period:</string>
    <string name="percent_title">Percent :</string>
    <string name="get_a_loan">Get a loan</string>
    <string name="amount">Amount</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_application">Create Application</string>
    <string name="amount_title">Amount:</string>
    <string name="first_name_title">First Name:</string>
    <string name="last_name_title">Last Name:</string>
    <string name="phone_number_title">Phone Number:</string>
    <string name="date_title">Date:</string>
    <string name="success_text">Your loan application has been successfully completed.</string>
    <string name="all_loans">All loans</string>
    <string name="none">not indicated</string>
    <string name="approved_message">Your application has been approved. Please refer to a loan office for get a loan</string>
    <string name="registred_message">Your application is in progress. Please check the status late</string>
    <string name="rejected_message">Your application has been rejected. Please try make new application</string>
    <string name="rejected">REJECTED</string>
    <string name="registred">REGISTERED</string>
    <string name="approved">APPROVED</string>
    <string name="warning_maxamount_message">Amount should be ⩽ than in application</string>
    <string name="network_error_message">Please check internet connection and try again</string>
    <string name="user_not_found_message">Incorrect username or password</string>
    <string name="user_bad_request_message">User is already exist</string>
    <string name="app_not_found_message">Application not found</string>
    <string name="list_not_found_message">Not one loans found</string>
    <string name="loan_not_found_message">Loan not found</string>
    <string name="forbidden_error_message">To view this page you need to login</string>
    <string name="logout">logout</string>
    <string name="russia">Russia</string>
    <string name="english">English</string>
    <string name="language">Language</string>

</resources>