<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

    <item
        android:enabled="false"
        android:title="@string/language"
        app:showAsAction="withText">

    </item>

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/language_EN"
            android:enabled="true"
            android:title="@string/english"
            app:showAsAction="never" />
        <item
            android:id="@+id/language_RU"
            android:enabled="true"
            android:title="@string/russia"
            app:showAsAction="never" />
    </group>


</menu>